--- a/レポート/webレポート2.tex
+++ b/レポート/webレポート2.tex
@@ -5,10 +5,11 @@
 \usepackage{stix2} % 欧文＆数式フォント
 \usepackage[fleqn,tbtags]{mathtools} % 数式関連 (w/ amsmath)
 \usepackage{hyperref}
+\hypersetup{hidelinks}
 
-\title{Web掲示板システム仕様書}
+\title{Webレポート2仕様書}
 \author{小川 泰生}
-\date{\today}
+\date{2025年1月7日}
 
 \begin{document}
 
@@ -17,60 +18,59 @@
 \tableofcontents
 
 \section{はじめに}
-本レポートは,Web掲示板システムについて,利用者向けガイド,管理者向けガイド,および開発者向けガイドの3つの視点から構成されています.以下に,それぞれのセクションの内容について説明します.
+本レポートは,Web掲示板について,利用者向け,管理者向け,および開発者向けの3部で構成されている.以下に,それぞれのセクションの内容について説明する.
 
 \subsection{レポートの構成概要}
 \begin{enumerate}
-    \item 利用者向けガイド:
+    \item 利用者向け
     \begin{itemize}
         \item アプリケーションの目的や機能一覧を説明し,ユーザーがどのようにアプリケーションを操作するかを示す,タスクの追加・削除・完了状態の変更など,主要な機能についての操作方法を具体的に説明する.
     \end{itemize}
-    \item 管理者向けガイド:
+    \item 管理者向け
     \begin{itemize}
         \item サーバーセットアップやシステム要件について説明し,管理者がアプリケーションを正常に運用するために必要な手順を記載する.
     \end{itemize}
-    \item 開発者向けガイド:
+    \item 開発者向け
     \begin{itemize}
         \item プロジェクトのディレクトリ構造,ファイル構成,使用した技術について説明する.
         \item フロントエンドとバックエンド間のAPI通信の仕様（エンドポイント,データ形式,リクエストとレスポンスの例など）を記載する.
-        \item 将来的な拡張案や改善点についても提案する.
     \end{itemize}
 \end{enumerate}
 
-\section{利用者向けガイド}
+\section{利用者向け}
 \subsection{アプリケーションの目的}
-Web掲示板システムは,ユーザーがメッセージを投稿,表示,ソート,削除できるよう設計されています.ユーザーが簡単に操作できるインターフェイスを提供し,コミュニケーションを円滑にします.
+Web掲示板は,ユーザーがメッセージを投稿,表示,ソート,削除できるよう設計されており,ユーザー同士のコミュニケーションを図る.
 
 \subsection{画面のレイアウトとボタンの仕様}
-掲示板システムの画面は以下の要素で構成されています.
+掲示板の画面は以下の要素で構成されている.
 \begin{itemize}
-    \item \textbf{ヘッダー}: システムのタイトルを表示します.
-    \item \textbf{入力フィールド}: 名前とメッセージを入力するためのテキストフィールドです.
-    \item \textbf{送信ボタン}: 入力されたメッセージを掲示板に追加します.
-    \item \textbf{リセットボタン}: すべての投稿を削除します.
-    \item \textbf{ソートボタン}: メッセージを名前順でソートします.
-    \item \textbf{投稿表示ボタン}: すべての投稿を表示します.
-    \item \textbf{文字数カウント}: メッセージの文字数をリアルタイムで表示します.
+    \item \textbf{ヘッダー}: システムのタイトルを表示する.
+    \item \textbf{入力枠}: 名前とメッセージを入力するための枠.
+    \item \textbf{送信ボタン}: 入力されたメッセージを掲示板に追加する.
+    \item \textbf{リセットボタン}: 入力した内容を削除する.
+    \item \textbf{ソートボタン}: メッセージを名前順でソートする.
+    \item \textbf{投稿表示ボタン}: すべての投稿を表示する.
+    \item \textbf{文字数カウント}: メッセージの文字数をリアルタイムで表示する.
 \end{itemize}
 
-\section{管理者向けガイド}
+\section{管理者向け}
 \subsection{サーバーのセットアップ}
-このアプリケーションは,ターミナルを使用して\texttt{app8.js}を起動することでサーバーが動作します.以下の手順に従って、サーバーをセットアップします.
+このサイトは,ターミナルを使用して\texttt{app8.js}を起動することでサーバーが動作する.以下は,サーバーを起動する手順である.
 \begin{enumerate}
     \item \texttt{app8.js}を使用したサーバーの起動
     \begin{verbatim}
     node app8.js
     \end{verbatim}
-    このコマンドを実行すると,サーバーが起動し,アプリケーションが動作します.
+    このコマンドを実行すると,サーバーが起動する.
 
     \item サーバーの動作確認
-    ブラウザで以下のURLにアクセスして、掲示板が正常に動作することを確認します.
+    \\ ブラウザで以下のURLにアクセスして、掲示板が正常に動作することを確認します.
     \begin{verbatim}
     http://localhost:8080/public/bbs.html
     \end{verbatim}
 \end{enumerate}
 
-\section{開発者向けガイド}
+\section{開発者向け}
 \subsection{内部的な作りと変数の意味}
 このアプリケーションの主な内部構造と変数の意味を以下に示します.
 \begin{itemize}
@@ -109,7 +109,7 @@ POST /messages
 \end{verbatim}
 
 \subsection{データ形式の詳細}
-メッセージデータはJSON形式でやり取りされます.以下に,主要なデータフィールドとその説明を示します.
+メッセージデータはJSON形式でやり取りされる.以下に,主要なデータフィールドとその説明を示す.
 \begin{itemize}
     \item \textbf{id}: メッセージの一意の識別子（整数）
     \item \textbf{name}: メッセージを投稿したユーザーの名前（文字列）
@@ -117,17 +117,17 @@ POST /messages
     \item \textbf{timestamp}: メッセージが投稿された日時（ISO 8601形式の文字列）
 \end{itemize}
 
-\subsection{通信フロー}
-メッセージの送信と取得の基本的なフローは以下の通りです.
+\subsection{通信の流れ}
+メッセージの送信と取得の基本的な流れは以下の通りである.
 \begin{enumerate}
-    \item ユーザーがメッセージを入力し,送信ボタンをクリックすると,フロントエンドからバックエンドにPOSTリクエストが送信されます.
-    \item バックエンドはリクエストを受け取り,新しいメッセージをデータベースに保存し,保存されたメッセージのデータをレスポンスとして返します.
-    \item フロントエンドはレスポンスを受け取り,新しいメッセージを画面に表示します.
+    \item ユーザーがメッセージを入力し,送信ボタンをクリックすると,フロントエンドからバックエンドにPOSTリクエストが送信される.
+    \item バックエンドはリクエストを受け取り,新しいメッセージをデータベースに保存し,保存されたメッセージのデータをレスポンスとして返す.
+    \item フロントエンドはレスポンスを受け取り,新しいメッセージを画面に表示する.
 \end{enumerate}
 
 \section{GitHubリポジトリ}
 このアプリケーションのソースコードはGitHubでホストされています.以下のURLからアクセスできます：
-\url{https://github.com/Ogitai/SPA.git}
+\url{https://github.com/taiki3500521/webpro_06}
 
 \end{document}
 
